index.css
* {
    max-width: 100%;
}

body {
    font-family: "Gill Sans", sans-serif;
}

#welcome {
    min-height: 93.5vh;
    justify-content: center;
}

section {
    display: flex;
    flex-direction: column;
    min-height: 75vh;
}

.navbar {
    flex-direction: column;
    gap: 1rem;
}

.navbar * {
    padding: 0;
}

.navbar-nav {
    gap: 1.4rem;
}

.nav-anchor {
    display: block;
    position: relative;
    visibility: hidden;
    top: -38vh;
}

#nav-links {
    font-size: 1.8rem;
}

.nav-link {
    padding-top: 0px;
    line-height: .8;
}

.display-1 {
    padding-bottom: 0;
    margin-bottom: 0;
}

.navbar-brand {
    padding: 0;
}

#contact {
    align-items: center;
}

#mc_embed_signup {
    max-width: 50%;
}

@media (min-width: 768px) {
    .display-1 {
        font-size: 4rem;
    }
    .lead {
        font-size: 2rem;
    }
    cite {
        font-size: 1.6rem;
    }

    p {
        font-size: 1.8rem;
    }

    
    #welcome {
        min-height: 94.5vh;
        max-width: 80%;
    }
    section {
        gap: 1rem;
        min-height: 66.5vh;
    }
    .navbar-nav {
        gap: 2rem;
    }
    .nav-anchor {
        top: -33vh;
    }
    
    #mc_embed_signup {
        max-width: 20%;
    }
}

